# PyTorch-FFNN-Classification-MNIST

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
