[project]
name = "pytorch-ffnn-classification-mnist"
version = "0.1.0"
description = "Feedforward classification neural network for MNIST dataset using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.11.7",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.ruff]
line-length = 120
